API: More robust startup of HTTP server
This patch enables a cleaner way to bootstrap the web server. It
- introduces an application wide config (pkg/app) which validates the
  settings/env vars and creates application wide objects like logger,
  db, github client.
- makes use of zap Logger (available though app.Logger)
- enables injecting config into modules (currently api)

Signed-off-by: Sunil Thaha <sthaha@redhat.com>
(cherry picked from commit 9991312033f6a6444cda4c0520343da99f105756)

--- a/backend/api/config/10-db-secret.yaml
+++ b/backend/api/config/10-db-secret.yaml
@@ -9,3 +9,4 @@ stringData:
   POSTGRESQL_DATABASE: tekton_hub
   POSTGRESQL_USER: postgres
   POSTGRESQL_PASSWORD: postgres
+  POSTGRESQL_PORT: "5432"
