UI: make nginx own config.js
(cherry picked from commit 8ecd55e2131ee2d4af12e3c3df14f2b28b253e7e)

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,7 @@ COPY --from=BUILD /app/build /usr/share/nginx/html
 COPY image/start.sh /usr/bin/
 
 USER root
-RUN chown nginx:root /usr/share/nginx/html/config.js
+RUN chown nginx:nginx /usr/share/nginx/html/config.js
 USER nginx
 
 EXPOSE 8080
