--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,8 @@ COPY --from=BUILD /app/build /usr/share/nginx/html
 COPY image/start.sh /usr/bin/
 
 USER root
-RUN chown nginx:nginx /usr/share/nginx/html/config.js
+RUN chmod ugo+rw /usr/share/nginx/html/config.js  && \
+    chown nginx:nginx /usr/share/nginx/html/config.js
 USER nginx
 
 EXPOSE 8080
