--- a/frontend/config/scratch/11-deployment.yaml
+++ b/frontend/config/scratch/11-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: ui
-          image: quay.io/sthaha/tekton-hub-ui
+          image: quay.io/tekton-hub/ui:v0.3
           env:
             - name: API_URL
               valueFrom:
