--- a/backend/api/config/db-migration/14-db-migration.yaml
+++ b/backend/api/config/db-migration/14-db-migration.yaml
@@ -2,13 +2,12 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: db-migration
-  namespace: tekton-hub
 spec:
   template:
     spec:
       containers:
       - name: db-migration
-        image: quay.io/sm43/db-e1225b1694ead6003d83a432fd4e95f5:latest
+        image: github.com/redhat-developer/tekton-hub/backend/api/cmd/db
         env:
             - name: POSTGRESQL_HOST
               value: db
