Add label app to api resources

--- a/backend/api/config/20-api-secret.yaml
+++ b/backend/api/config/20-api-secret.yaml
@@ -3,6 +3,8 @@ kind: Secret
 metadata:
   name: api
   namespace: tekton-hub
+  labels:
+    app: api
 type: Opaque
 stringData:
   GITHUB_TOKEN: ''
