API: Update deployment for JWT_SIGNING_KEY & cleanup

--- a/backend/api/config/21-api-deployment.yaml
+++ b/backend/api/config/21-api-deployment.yaml
@@ -59,3 +59,8 @@ spec:
                 secretKeyRef:
                   name: api
                   key: CLIENT_SECRET
+            - name: JWT_SIGNING_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: api
+                  key: JWT_SIGNING_KEY
